5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1795_1601.log
== TEST (2019-05-30 16:05:13) 
-- CODE:
from numpy import*

vet = array(float(input("Digite o tempo: ")))

i= 0
posi= 0

while (size(vet) > i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1
	
	else:
		print(i)

-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:28) 
-- CODE:
from numpy import*

vet = array(float(input("Digite o tempo: ")))

i= 0
posi= 0

while (size(vet) > i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:19) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (size(vet) > i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:23) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (size(vet) > i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:52) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (size(vet) < i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:35) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (size(vet) < i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:11:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (size(vet) < i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1
	
else:
	print(i)

-- EXECUTION TIME:
0.371429
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:11:52) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (size(vet) < i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:43) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) < i):
	if (vet[posi] > vet[i]):
		i +=1
		posi +=1
posi += 1
	
else:
	print(i)

-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) < i):
	if (vet[posi] > vet[i]):
		i +=1
		posi +=1
posi += 1
	
else:
	print(i)

-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:05) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) < i):
	if (vet[posi] > vet[i]):
		i +=1
		posi +=1
posi += 1
	
	else:
		print(i)

-- ERROR:
File "XXXX", line 14
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:22) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) < i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:12) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) > i):
	if (vet[posi] > vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:46) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:15:18) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- EXECUTION TIME:
0.425688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    if (vet[posi] < vet[i]):
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:15:25) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- EXECUTION TIME:
0.520414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    if (vet[posi] < vet[i]):
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:26) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:15:30) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- EXECUTION TIME:
0.396828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    if (vet[posi] < vet[i]):
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:15:35) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:25) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= min(vet)

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi= min(vet)

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:48) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:17:51) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- EXECUTION TIME:
0.48466
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    if (vet[posi] < vet[i]):
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(min(vet))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:18:25) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(min(vet))

-- EXECUTION TIME:
0.503574
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    if (vet[posi] < vet[i]):
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:26) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (min(vet) > i):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(min(vet))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:19:39) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < vet):
	if (vet[posi] < vet[i]):
		i +=1
	posi +=1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:34) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < vet):
	if (vet[posi] < vet[i]):
		posi += 1
	i += 1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:20:58) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if (vet[posi] < vet[i]):
		posi += 1
	i += 1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:21:09) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if (vet[posi] < vet[i]):
		posi += 1
	i += 1

	
else:
	print(i)

-- EXECUTION TIME:
0.47657
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    if (vet[posi] < vet[i]):
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:12) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if (vet[posi] < vet[i]):
		posi += 1
	i += 1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:11) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if (min(vet) < vet[i]):
		posi += 1
	i += 1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:13) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if (min(vet) < vet[i]):
		posi += 1
	i += 1

	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:13) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if (min(vet) < vet[i]):
		posi += 1
	i += 1

	
else:
	print(i)

-- EXECUTION TIME:
0.545121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 9, in <module>
    if (min(vet) < vet[i]):
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:50) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	i += 1
	
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:23:52) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	i += 1
	
print(i)

-- EXECUTION TIME:
0.399615
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
10
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
32
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:53) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	i += 1
	
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:10) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if(vet[posi] > vet[i]):
		posi += 1
	i += 1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:17) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < min(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	
else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:59) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0
winner = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	
else:
	print(winner)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:19) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0
win = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	
else:
	print(win)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:06) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0
win = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	win = win + i
else:
	print(win)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:26) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0
win = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	win = win + i
else:
	print(win)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:29:38) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0
win = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	win = win + i
else:
	print(win)

-- EXECUTION TIME:
0.432222
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
20.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
42.0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:41) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0
win = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1
	win = win + i
else:
	print(win)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:48) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0
win = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(vet[min])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:30:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0
win = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(vet[min])

-- EXECUTION TIME:
0.383803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/1601/main.py", line 15, in <module>
    print(vet[min])
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:53) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < (vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size[vet]):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:09) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:26) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- EXECUTION TIME:
0.387754
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
4
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
4
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:30) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:17) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
		i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:24) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
		i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:36) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += -1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:07) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:28) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = min(vet)

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:17) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		i += 1
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:36) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		i += 1
	posi += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:14) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite o tempo: ")))

i= 0
posi = 0

while (i < size(vet)):
	if(vet[posi] < vet[i]):
		posi += 1
	i += 1

else:
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
